--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio-Website</title>
-    <!--links to other files-->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- ===== links to other files ===== -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
+    <!-- ===== Start of Main container ===== -->
+    <div class="main-container">
+        <!-- ===== Start of Aside content ===== -->
+        <div class="aside">
+            <div class="logo">
+                <a href="#"><span>A</span>thew</a>  
+            </div>
+            <div class="nav-toggler">
+                <span></span>
+            </div>
+            <ul class="nav">
+                <li><a href="#" class="active"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#"><i class="fa fa-user"></i> About</a></li>
+                <li><a href="#"><i class="fa fa-list"></i> Services</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i> Portfolio</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i> Contact</a></li>
+            </ul>
+        </div>
+        <!-- ===== End of Aside content ===== -->
+        <!-- ===== Start of Main content ===== -->
+        <div class="main-content">
+            <!-- ===== Start of Home section ===== -->
+            <section class="home section">
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info padd-15">
+                            <h3 class="hello">Hello, my name is <span class="name">Matthew Ikenna</span></h3>
+                            <h3 class="my-profession">I'm a <span class="typing">Software Developer</span></h3>
+                            <p>I'm a Software....</p>
+                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                        </div>
+                        <div class="home-img padd-15">
+                            <img src="images/home2.jpeg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- ===== End of Home section ===== -->
+        </div>
+        <!-- ===== End of Main content ===== -->
+    </div>
+    <!-- ===== End of Main container ===== -->
+    <!-- ===== links to JavaScript files ===== -->
     <script src=" js/script.js"></script>
     <footer>
 
